// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render simple timeline graph 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root timelineCard"
    >
      <div
        class="timelineContent"
      >
        <div
          class="MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
        >
          <div
            class="timelineDateContainer"
          >
            <p
              class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
            >
              2018
            </p>
            <p
              class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
            >
              04/20
            </p>
          </div>
          <div
            class="timeline timelineStart timelineEnd"
          >
            <div
              class="notch"
            />
          </div>
          <div
            class="MuiPaper-root timelinePaper MuiPaper-elevation4 MuiPaper-rounded"
            data-testid="timeline-item-0"
            id="0"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test selecting an item on the timeline graph 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root timelineCard"
    >
      <div
        class="timelineContent"
      >
        <div
          class="MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
        >
          <div
            class="timelineDateContainer"
          >
            <p
              class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
            >
              2018
            </p>
            <p
              class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
            >
              04/20
            </p>
          </div>
          <div
            class="timeline timelineStart timelineEnd"
          >
            <div
              class="notch"
            />
          </div>
          <div
            class="MuiPaper-root timelinePaperButton MuiPaper-elevation4 MuiPaper-rounded"
            data-testid="timeline-item-0"
            id="0"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test unselecting an item on the timeline graph 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root timelineCard"
    >
      <div
        class="timelineContent"
      >
        <div
          class="MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
        >
          <div
            class="timelineDateContainer"
          >
            <p
              class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
            >
              2018
            </p>
            <p
              class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
            >
              04/20
            </p>
          </div>
          <div
            class="timeline timelineStart timelineEnd"
          >
            <div
              class="notch selected"
            />
          </div>
          <div
            class="MuiPaper-root timelinePaperButton MuiPaper-elevation4 MuiPaper-rounded"
            data-testid="timeline-item-0"
            id="0"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
